# opengl-raytracer

./: .gitignore  .~lock.Report.docx#  CMakeCache.txt  CMakeLists.txt  Makefile  Report.docx  cmake_install.cmake  run_csse_lab  ~$Report.docx  ~WRL1670.tmp  ~WRL2995.tmp
OpenGLProject/: Makefile  OpenGLProject.sln  ]
OpenGLProject/OpenGLProject/: OpenGLProject.vcxproj  OpenGLProject.vcxproj.filters  RayTracer.cpp  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  TextureBMP.cpp  Window.cpp  Window.h  joh29_raytracer
joh29-cosc363-assignment2-submission/OpenGLProject/: CMakeCache.txt  cmake_install.cmake
joh29-cosc363-assignment2-submission/OpenGLProject/OpenGLProject/: Plane.cpp  RayTracer.cpp  SceneObject.h  joh29_raytracer
